# verifiers

./: .env.example  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .venv  AGENTS.md  ARCHITECTURE.md  COMPARE.md  GITHUB_PR_TEMPLATE.md  PR.md  PR_1559_1576_V1_REFACTOR_COMPARISON.md  PR_DESCRIPTION.md  README.md  RLM_BASH_REPL_SPEC.md  SIGTERM_HANDLING.md  TEXTIFY_PLAN.md  TOPOLOGY_DEFERRED_WORK.md  V1_TEST_COMMANDS.md  all.sh  analyze_metrics.py  deepdive.sh  dummy.sh  mika.py  nih.sh  oolong.sh  pyproject.toml  run_nih_ablations.sh  scratchpad_start_time.txt  subllm.sh  test_metadata.py  test_results.py  tools.sh
.cligym-image-push/: failed-image-map.jsonl  image-map.jsonl
.cursor/: BUGBOT.md
.semgrep/: verifiers.yml
bench/: .gitignore  RESULTS.md  agentic_aggregate.py  agentic_benchmark.sh  aggregate.py  bench_aggregate.py  benchmark.json  benchmark.sh  persistent_runtime.py  plot.py  plot_e2e.py  plot_mux.py  run_bench.sh  summarize.py
configs/: agentic_judge.toml  alphabet_sort.toml  code_golf.toml  deepwiki.toml  endpoints.py  endpoints.toml  glossary.toml  gsm8k-codex-timeout-precedence.toml  gsm8k.toml  gsm8k_rlm.toml  harbor.toml  math500.toml  shell_guard.toml  solver_grader.toml  swe_style_judge.toml  terminal-bench-2-glm-4.7.toml  terminal-bench-2.toml  textarena.toml  tmax-v1-smoke.toml  wiki_search.toml  wiki_search_compact.toml  wikispeedia.toml  wordle.toml
docs/: agent-programs.md  agent_env_harness_taskset_sketch.md  architecture.md  byo-harness.md  debug-empty-model-response.md  development.md  environments.md  eval-process-protocol.md  evaluation.md  evaluations.md  faqs.md  getting_started.md  harbor.md  harnesses.md  mint.json  multi_agent_architecture.md  multi_turn_extension.md  multiagent.md  overview.md  prime_cli_verifiers_unification_design.md  reference.md  rl-packaging-proposal.md  rlm_env_sandbox.md  rltrainer-tutorial.md  scaffold_poc_notes.md  taskset_harness_best_practices.md  taskset_harness_refactor_plan.md  taskset_harness_refactor_state.md  training.md
environments/: AGENTS.md  README.md  delete_model_outputs.py  plot_results.py  run_all_ablations.sh
environments/aime24_v1/: pyproject.toml
environments/aime24_v1/aime24_v1/: __init__.py  taskset.py  verify.py
environments/alphabet_sort_th/: alphabet_sort_th.py  pyproject.toml
environments/alphabet_sort_v1/: README.md  pyproject.toml
environments/alphabet_sort_v1/alphabet_sort_v1/: __init__.py  __main__.py  taskset.py  user.py
environments/alphabet_sort_v1/alphabet_sort_v1/servers/: __init__.py  user.py
environments/alphabet_sort_v1/alphabet_sort_v1/servers/user/: __init__.py  config.py  user.py
environments/amazon/: CLAUDE.md  amazon.py  entities.py  entity_sampler.py  pyproject.toml  task_spec.py  task_specs.sampled.yaml
environments/amazon/app/app/: globals.css  layout.tsx  store.ts
environments/amazon/app/app/api/cart/: route.ts
environments/amazon/app/app/api/init/: route.ts
environments/amazon/app/app/deals/: page.tsx
environments/amazon/app/app/search/: page.tsx
environments/amazon/kernel/: __init__.py  graph_contract.yaml  loaders.py  preflight.py  resample.py  sampler.py  sampling_request.yaml  semantics.py  types.py  verify_dom.py
environments/amazon_shopping/: amazon_shopping.py  pyproject.toml
environments/api-design/: api-design.py  pyproject.toml
environments/arc_1d_multistrategy/: arc_1d_multistrategy.py  pyproject.toml
environments/arc_agi_3/: README.md  arc_agi_3.py  pyproject.toml
environments/arc_codegen/: arc_codegen.py  pyproject.toml
environments/arc_curriculum/: arc_curriculum.py  pyproject.toml  recipe_executor.py
environments/arc_curriculum_filtered/: arc_curriculum.py  pyproject.toml  recipe_executor.py
environments/arc_multiagent/: ARC_MULTIAGENT_OVERVIEW.md  arc_multiagent.py  pyproject.toml
environments/arc_multistrategy/: arc_multistrategy.py  pyproject.toml
environments/arc_multistrategy_vision/: arc_multistrategy_vision.py  pyproject.toml
environments/arc_synthetic_multistrategy/: arc_synthetic_multistrategy.py  pyproject.toml
environments/arc_synthetic_multistrategy_vision/: arc_synthetic_multistrategy_vision.py  pyproject.toml
environments/bfcl_v3_v1/: README.md  pyproject.toml
environments/bfcl_v3_v1/bfcl_v3_v1/: __init__.py  harness.py  taskset.py
environments/bias_detector/: RESEARCH_SUMMARY.md  articles.json  bias_detector.py  corpus_v2.json  corpus_v3.json  eval_checkpoint.py  generate_corpus.py  pyproject.toml  rescore_and_expand.py  synthetic_corpus.json
environments/bias_detector/research/: INSTRUCTIONS.md  creative_experiments.md  findings_v2.md  findings_v3.md  findings_v4_production.md  next_wave_v40.md
environments/browser_test/: README.md  browser_test.py  pyproject.toml
environments/browser_toolset_example/: README.md  browser_toolset_example.py  pyproject.toml
environments/chess_v1/: pyproject.toml
environments/chess_v1/chess_v1/: __init__.py  topology.py
environments/code_golf_v1/: code_golf_v1.py  pyproject.toml
environments/code_golf_v1/code_golf_v1/: __init__.py  taskset.py
environments/code_review/: README.md  code_review.py  pyproject.toml
environments/color_codeword_v1/: pyproject.toml
environments/color_codeword_v1/color_codeword_v1/: __init__.py  __main__.py  taskset.py  user.py
environments/color_codeword_v1/color_codeword_v1/servers/: user.py
environments/compact/: pyproject.toml
environments/compact/compact/: __init__.py  annotate.py  harness.py  program.py
environments/context_dropping_rlm/: README.md  context_dropping_rlm.py  pyproject.toml
environments/debate_v1/: pyproject.toml
environments/debate_v1/debate_v1/: __init__.py  topology.py
environments/deepdive_th/: deepdive_th.py  pyproject.toml
environments/deepwiki_v1/: deepwiki_v1.py  pyproject.toml
environments/deepwiki_v1/deepwiki_v1/: __init__.py  taskset.py
environments/deepwiki_v1/deepwiki_v1/servers/: deepwiki.py
examples/: agent.py  eval_config_example.toml  inference_policy_example.py  multi_env_eval_example.py  multi_turn_example.py  (+5 more)
(+3016 files in other folders)
