[project]
name = "aime24-v1"
version = "0.1.0"
description = "aime24-v1 — AIME 2024 competition math (single-turn eval, math-verify scoring)."
requires-python = ">=3.10"
dependencies = ["datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aime24_v1"]

