[project]
name = "alphabet-sort-th"
version = "0.1.0"
tags = ["sorting", "names", "multi-turn", "xml", "synthetic", "taskset-harness"]
license = "Apache-2.0"
description = "v1 taskset/harness alphabet-sort example."
dependencies = [
    "verifiers>=0.1.13.dev0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["alphabet_sort_th.py", "pyproject.toml"]
