[project]
name = "alphabet-sort-v1"
version = "0.1.0"
description = "alphabet-sort-v1 — maintain an alphabetically sorted list of names across turns, driven by a colocated user simulator."
requires-python = ">=3.10"
dependencies = ["verifiers", "datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alphabet_sort_v1"]
