[project]
name = "arc-1d-multistrategy"
description = "Multi-strategy ARC-1D solver with two codegen strategies"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["verifiers>=0.1.9", "datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["arc_1d_multistrategy.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 2
