[project]
name = "arc-curriculum-filtered"
description = "2-LoRA self-play curriculum with dynamic op filtering based on solver performance"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["verifiers>=0.1.9", "datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
verifiers = { workspace = true }

[tool.hatch.build]
include = ["arc_curriculum.py", "recipe_executor.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 2
