[project]
name = "arc-multiagent"
description = "ARC-AGI multi-agent solver pipeline with multi-strategy solving and dual judge evaluation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9",
    "matplotlib",
    "numpy",
    "scipy",
    "opencv-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["arc_multiagent.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 1
