[project]
name = "arc-multistrategy"
description = "Multi-strategy ARC solver with codegen + image + API judge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["verifiers>=0.1.9", "datasets", "matplotlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["arc_multistrategy.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 2
