[project]
name = "bfcl-v3-v1"
description = "BFCL v3 evaluation environment on the v1 Taskset/Harness runtime"
tags = ["tool-use", "eval", "v1"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.13.dev0",
    "bfcl-eval>=2026.3.23",
    "soundfile>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["bfcl_v3_v1/**/*", "README.md", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
