[project]
name = "chess-v1"
version = "0.1.0"
description = "chess-v1 — two agents play chess through live sessions; the board is the referee (example topology)."
requires-python = ">=3.10"
dependencies = ["verifiers", "chess>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chess_v1"]
