[project]
name = "code-golf-v1"
version = "0.2.0"
description = "code-golf-v1 — write a short, fast program (showcases group rewards)."
requires-python = ">=3.10"
dependencies = ["verifiers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_golf_v1"]

