[project]
name = "compact"
version = "0.2.0"
description = "compact — a context-rewrite harness for v1 (branches every turn)."
requires-python = ">=3.10"
dependencies = ["verifiers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compact"]

