[project]
name = "debate-v1"
version = "0.1.0"
description = "debate-v1 — n debaters argue a motion through concurrent live sessions, then vote (example topology)."
requires-python = ">=3.10"
dependencies = ["verifiers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["debate_v1"]
