[project]
name = "deepdive-th"
version = "0.1.0"
tags = ["rl", "search", "qa", "taskset-harness"]
license = "Apache-2.0"
description = "Taskset/harness DeepDive port with Serper search tools."
dependencies = [
    "verifiers>=0.1.13",
    "aiohttp>=3.10.0",
    "datasets>=4.0.0",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["deepdive_th.py", "pyproject.toml"]
