[project]
name = "deepwiki-v1"
version = "0.1.0"
description = "deepwiki-v1 — task tools via a remote (streamable-HTTP) MCP server."
requires-python = ">=3.10"
dependencies = ["verifiers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepwiki_v1"]

